Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - host: test-ingress.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 80
    - host: beta.test-ingress.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 80
